<resources>
    <string name="app_name">ERIT Smart Display</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="action_sync">Sync</string>
    <string name="action_about">About</string>
    <string name="select_message">Select the Message</string>
    <string name="enter_the_message">Enter Message </string>
    <string name="message_x">Message %1$d</string>
    <string name="price_board">Price Board</string>
    <string name="syncing">Syncing...</string>
    <string name="saving">Saving...</string>
    <string name="loading">Loading...</string>
    <string name="your_data_is_syncing">Your data is syncing...</string>
    <string name="your_data_is_saving">Your data is saving...</string>
    <string name="done">Done!</string>
    <string name="pms">PMS</string>
    <string name="dpk">DPK</string>
    <string name="ago">AGO</string>
    <string name="zeros">00</string>
    <string name="zeros_three">000</string>
    <string name="select_the_number_of_messages_title">Number of Messages</string>
    <string name="number_of_messages_summary">Enter the number of messages in your display board</string>
    <string name="board_settings">Board Settings</string>
    <string name="board_configuration">Configuration</string>
    <string name="BRT_value">BRT Value</string>
    <string name="set_BRT_value">BRT Value: %1$d</string>
    <string name="adjust_brightness">Adjust the Brightness</string>
    <string name="SPD_value">SPD Value</string>
    <string name="set_SPD_value">SPD Value: %1$d</string>
    <string name="adjust_speed">Adjust the Speed</string>
    <string name="INV_value">INV Value</string>
    <string name="set_INV">Set the INV value</string>
    <string name="board_serial_number">Board Serial Number</string>
    <string name="key_spd">spd</string>
    <string name="key_brt">brt</string>
    <string name="key_inv">inv</string>
    <string name="key_number_of_msgs">number_of_messages</string>
    <string name="key_serial">serial</string>
    <string name="unknown_uri">Unknown Uri</string>
    <string name="content_of_message">Content of Message</string>
    <string name="erit_logo">erit logo</string>
    <string name="allow_title">Allow Permisson</string>
    <string name="allow_message">This app needs the permission to modify the system\'s settings in order to create hotspot</string>
    <string name="yes">Allow</string>
    <string name="noo">Cancel</string>
    <string name="save">Save</string>
</resources>
