<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.kryptkode.cyberman.eritsmartdisplay.EritSmartDisplayActivity" >

    <item
        android:id="@+id/action_sync"
        android:title="@string/action_sync"
        android:orderInCategory="1"
        android:icon="@drawable/ic_sync_black_24dp"
        app:showAsAction="always"
        />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="2"
        android:icon="@drawable/ic_settings_black_36dp"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        android:icon="@drawable/ic_info_black_24dp"
        app:showAsAction="never"
        android:orderInCategory="3"
        />
</menu>
